fixed div alignment

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -317,11 +317,11 @@ b, strong {
     color: #000;
 }
 
-div .leftmost {
+.leftmost {
 	float: left;
 }
 
-div .rightmost {
+.rightmost {
 	float: right;
 }
 
